tests/negative/symbols/recursive.orng
// recursive.orng:6:14: error: error: recursive definition detected
//     let x = x
//             ^
// 
fn main() -> Int  {
    let x = x
    0
}